--- a/start.html
+++ b/start.html
@@ -28,7 +28,7 @@
                 <!-- br
                 <a href="cv.html"> <img src="send-message.svg" alt="CV"> CV </a> -->
                <br>
-                <a href="Lek.html"> <img src="send-message.svg" alt="Lek"> Lek </a>
+                <a href="index.html"> <img src="send-message.svg" alt="Lek"> Lek </a>
          
         </nav>
 
